--- a/web/src/index.css
+++ b/web/src/index.css
@@ -56,6 +56,7 @@ input.form-control {
   display: block;
   margin: 0 auto;
   margin-top: 20px;
+  margin-bottom: 40px;
   max-width: 900px;
   border-radius: 10px;
   box-shadow: 0px 0px 18px rgba(0, 0, 0, .25);
