--- a/web/src/index.css
+++ b/web/src/index.css
@@ -6,6 +6,12 @@ html, body {
   font-family: 'Poppins', sans-serif;
 }
 
+.Toastify__toast {
+  padding: 10px 20px;
+  font-size: 13px;
+  border-radius: 10px;
+}
+
 textarea:focus, 
 textarea.form-control:focus, 
 input.form-control:focus, 
