--- a/web/src/components/NavigationBar/style.css
+++ b/web/src/components/NavigationBar/style.css
@@ -15,9 +15,13 @@ nav {
   color: rgb(109, 109, 108);
   font-weight: 400;
   padding-right: 20px;
+}
+.nav-link a {
+  text-decoration: none;
+  color: rgb(109, 109, 108);
   transition: all .2s linear;
 }
-.navbar-light .navbar-nav .nav-link:hover {
+.navbar-light .navbar-nav .nav-link a:hover {
   color: #2b2b29;
 }
 
